<resources>
    <string name="app_name">NotesTaker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_send_email_title">Send Email</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="title_activity_main">Notes Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="nav_communications">Communications</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_courses">Courses</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_share_message">Share</string>
    <string name="nav_send_message">Send</string>
    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
</resources>